--- a/static/index.html
+++ b/static/index.html
@@ -1,21 +1,25 @@
 <html>
-  <head>
-    <script>
-      var go = new Go();
 
-      WebAssembly.instantiateStreaming(fetch("project_name_generator.wasm"), go.importObject).then(function (result) {
-        go.run(result.instance);
-      });
+<head>
+  <script>
+    var go = new Go();
 
-      function generateProjectName() {
-        return go.exports.generateProjectName();
-      }
-    </script>
-  </head>
-  <body>
-    <h1>Project Name Generator</h1>
-    <button onclick="document.getElementById('projectName').innerHTML = generateProjectName();">Generate Project Name</button>
-    <p id="projectName"></p>
-  </body>
+    WebAssembly.instantiateStreaming(fetch("project_name_generator.wasm"), go.importObject).then(function (result) {
+      go.run(result.instance);
+    });
+
+    function generateProjectName() {
+      return go.exports.generateProjectName();
+    }
+  </script>
+</head>
+
+<body>
+  <h1>Project Name Generator</h1>
+  <button onclick="document.getElementById('projectName').innerHTML = generateProjectName();">Generate Project
+    Name</button>
+  <p id="projectName"></p>
+</body>
+
 </html>
 ``
