fixup! update readme with some information on the project

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,8 @@
     WebAssembly.instantiateStreaming(fetch("app.wasm"), go.importObject).then(
       (result) => {
         go.run(result.instance);
-        document.getElementById("content").innerHTML += "<pre><code>" + JSON.stringify(generate(21  ), null, " ") + "</code></pre>";
+        document.getElementById("content").innerHTML +=
+          "<pre><code>" + JSON.stringify(generate(21), null, " ") + "</code></pre>";
       }
     );
   </script>
